syntax = "proto3";

option csharp_namespace = "TradeBot.Common.OrderSubscriberService.v1";
import "google/protobuf/timestamp.proto";
import "tradebot/common/v1/common.proto";
package tradebot.common.order_subscriber_service.v1;

service OrderSubscriberService {
	/*
		Подписывается на ордера выбранного типа
	*/
	rpc SubscribeOrders(SubscribeOrdersRequest) returns (stream SubscribeOrdersResponse);
}

message SubscribeOrdersRequest{
	tradebot.common.v1.OrderSignature signature = 1;
}

message SubscribeOrdersResponse{
	tradebot.common.v1.Order order = 1; 
}